Added rent service