@@ -6,11 +6,11 @@ import com.asusoftware.Myrent.model.PostCategory;
 import com.asusoftware.Myrent.repository.PostRepository;
 import com.asusoftware.Myrent.service.post.PostFinder;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * My-rent Created by Antonio on 2/3/2021
@@ -23,9 +23,16 @@ public class PostFinderImpl implements PostFinder {
 
     @Override
     public List<Post> findAllByCategory(PostCategory postCategory) {
-        return postRepository.findAll().stream()
+        // TODO: find post based on category and filtered from new post to old
+       /* return postRepository.findAll(PageRequest.of(page, size)).stream()
                 .filter(post -> post.getPostCategory().equals(postCategory))
-                .collect(Collectors.toList());
+                .collect(Collectors.toList()); */
+        return null;
+    }
+
+    @Override
+    public List<Post> findAll(int page, int size) {
+        return postRepository.findAll(PageRequest.of(page, size)).toList();
     }
 
     @Override
